changed backGround on Form1

--- a/CalculatorForms/CalculatorForms/CalculatorForms.csproj
+++ b/CalculatorForms/CalculatorForms/CalculatorForms.csproj
@@ -79,6 +79,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\formules-math.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
